--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: joinSpectraData
 Title: A Temporary Implementation of joinSpectraData
-Version: 0.0.1
+Version: 0.0.2
 Authors@R: 
     person(given = "Laurent", family = "Gatto",
            email = "laurent.gatto@uclouvain.be",
            role = c("aut", "cre"),	
            comment = c(ORCID = "0000-0002-1520-2268"))
 Description: A junction to add new spectra data to a Spectra object.
-Depends: Spectra
+Depends:
+   Spectra,
+   methods
 Suggests:
    msdata,
    PSM,
